# ironlog

./: .gitignore  Cargo.toml  DESIGN.md  Dockerfile  Dockerfile.consumer-cli  Dockerfile.producer-cli  LICENSE  README.md
consumer/: Cargo.toml
consumer-cli/: Cargo.toml
consumer-cli/src/: main.rs
consumer/src/: lib.rs
core/: Cargo.toml
core/src/: common.rs  consumer.rs  handshake.rs  lib.rs  producer.rs
docs/: APPROACH.md  COMMITLOG.md  DESIGN.md  DESIGN_V2.md  DESIGN_V3.md  DESIGN_V4.md  RUST_JOURNAL.md
docs/versions/: v2.md  v3.md
producer/: Cargo.toml
producer-cli/: Cargo.toml
producer-cli/src/: main.rs
producer/src/: lib.rs
server/: Cargo.toml
server/src/: TaskRunner.rs  commit_log.rs  commit_logger.rs  ironlog_runtime.rs  main.rs  task_runner.rs  worker.rs
versions/: v1.md
