[package]
name = "server"
version = "0.1.1"
edition = "2021"

[profile.release]
debug = 1


[features]
default = ["splice"]
splice = []



[dependencies]
dhat = "0.3.3"
ironlog_core = { path = "../core", package = "core" }
walkdir = "2.5.0"
compio = { version = "0.18.0", features = ["net", "macros", "dispatcher", "fs"] }
rustc-hash = "2.1.2"
libc = "0.2.186"
flume = "0.12.0"

